--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,22 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "dependencies": {
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
-    "csv-parse": "^5.5.2",
-    "express": "^4.18.2",
-    "jest": "^29.7.0",
+    "csv-parse": "^5.0.4",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.12.3",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
+    "pm2": "^5.2.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.15",
+    "supertest": "6.1.6"
   }
 }
